--- a/index.html
+++ b/index.html
@@ -67,11 +67,15 @@
     </div>
   </header>
   <div class="container">
-    <div class="image__container">
+    <div style="background-image: url(images/شبكات.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding-top: 3.5em;">
+    <div  class="image__container">
       <img src="https://ugc.production.linktr.ee/c30c8d18-78c2-40b6-a470-fbade9d60ef2_7.jpeg?io=true&size=avatar" alt="logo picture">
     </div>
   <h1>@MbN.2020</h1>
- 
+ </div>
 
   <a class="tile" href="http://facebook.com/Mbn.cp" target="_blank">
     <div class="icon">
